--- a/web/Base.lproj/Main.storyboard
+++ b/web/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qeh-a9-3Kn">
+                                <rect key="frame" x="0.0" y="66" width="375" height="601"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dDr-Ca-Xoe">
+                                <rect key="frame" x="8" y="28" width="267" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ueM-h7-jv6">
+                                <rect key="frame" x="283" y="28" width="84" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4Fa-PL-2Sj"/>
+                                    <constraint firstAttribute="width" constant="84" id="gjG-id-uRF"/>
+                                </constraints>
+                                <state key="normal" title="load"/>
+                                <connections>
+                                    <action selector="loadAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q3f-m9-c5K"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Qeh-a9-3Kn" secondAttribute="bottom" id="5CH-0L-d82"/>
+                            <constraint firstItem="Qeh-a9-3Kn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5dy-DR-ToT"/>
+                            <constraint firstItem="dDr-Ca-Xoe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="DyB-tB-COS"/>
+                            <constraint firstAttribute="trailing" secondItem="Qeh-a9-3Kn" secondAttribute="trailing" id="Idh-Ih-Xt1"/>
+                            <constraint firstItem="ueM-h7-jv6" firstAttribute="centerY" secondItem="dDr-Ca-Xoe" secondAttribute="centerY" id="Mp2-GZ-sPp"/>
+                            <constraint firstItem="dDr-Ca-Xoe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="Mrk-z4-ZqC"/>
+                            <constraint firstItem="ueM-h7-jv6" firstAttribute="leading" secondItem="dDr-Ca-Xoe" secondAttribute="trailing" constant="8" id="hMm-Yq-plI"/>
+                            <constraint firstAttribute="trailing" secondItem="ueM-h7-jv6" secondAttribute="trailing" constant="8" id="o6W-zZ-2Yb"/>
+                            <constraint firstItem="Qeh-a9-3Kn" firstAttribute="top" secondItem="dDr-Ca-Xoe" secondAttribute="bottom" constant="8" id="vYZ-QY-iu8"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loadBtn" destination="ueM-h7-jv6" id="wRC-EB-DV7"/>
+                        <outlet property="tf" destination="dDr-Ca-Xoe" id="uJ6-fy-a4D"/>
+                        <outlet property="web" destination="Qeh-a9-3Kn" id="Kga-iZ-Sk9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="137.18140929535232"/>
         </scene>
     </scenes>
 </document>
